# IBMBob

./: .gitignore  README.md  USAGE.md  pyproject.toml
bob_sessions/: bob_task_may-16-2026_11-26-32-am.md  bob_task_may-16-2026_11-49-24-am.md  bob_task_may-16-2026_12-47-40-pm.md  bob_task_may-17-2026_3-31-35-pm.md
demo/: setup_demo_repo.py
demo-origin.git/refs/heads/: main
scripts/: make_emoji.py  smoke_client.py
src/gitbob/: __init__.py  __main__.py  cli.py  danger.py  git_context.py  git_exec.py  gitgraph.py  gitproc.py  safety.py  server.py
src/gitbob/kit/: AGENTS.md  custom_modes.yaml  mcp.json
src/gitbob/kit/rules-gitbob/: 01-workflow.md  02-safety.md  03-onboarding.md  04-timeline.md  05-danger.md
tests/: conftest.py  test_cli.py  test_danger.py  test_git_context.py  test_git_exec.py  test_gitgraph.py  test_safety.py
