[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitbob"
version = "0.1.0"
description = "GitBob — a natural-language Git copilot for IBM Bob. An MCP server that gives Bob safe, structured git superpowers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GitBob Team" }]
keywords = ["git", "mcp", "ibm-bob", "ai", "agent", "developer-tools"]
dependencies = [
    "mcp>=1.27",
]

[project.scripts]
gitbob = "gitbob.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitbob"]

[tool.hatch.build.targets.wheel.force-include]
"src/gitbob/kit" = "gitbob/kit"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
